# rebuildCfg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
examples/: valid_config.json
src/: main.cpp
src/config/: Config.hpp  ConfigParser.cpp  ConfigParser.h  ConfigParser.hpp
